--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,11 @@ dependencies:
   webview_flutter: ^4.7.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
