--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,48 +4,40 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 30
     environment:
-      group:
+      groups:
         - google_credentials
       flutter: stable
-      xcode: latest
+      xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
       cocoapods: default
       vars:
-        FIREBASE_PROJECT: "flutter-explained-ci-cd-8f33c"
+        FIREBASE_PROJECT:  "flutter-explained-ci-cd-8f33c"
     scripts:
-      - name: Get Flutter packages
-        script: |
-          flutter packages pub get
-      - name: Build APK with Flutter
-        script: |
-          flutter build apk --debug
-      - name: Create debug and test APK
-        script: |
-          set -ex
-          cd android
-          ./gradlew app:assembleAndroidTest
-          ./gradlew app:assembleDebug -Ptarget="$CM_BUILD_DIR/integration_test/app_test.dart"
-      - name: Debug Environment Variables
-        script: |
-          echo "Printing environment variables..."
-          printenv
-      - name: Run Firebase Test Lab Tests
-        script: |
-          set -ex
-          if [ -z "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" ]; then
-            echo "GCLOUD_SERVICE_ACCOUNT_CREDENTIALS is not set!"
-            exit 1
-          fi
-          echo $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS | base64 --decode > ./gcloud_key_file.json
-          gcloud auth activate-service-account --key-file=./gcloud_key_file.json
-          gcloud --quiet config set project $FIREBASE_PROJECT
-          gcloud firebase test android run \
-           --type instrumentation \
-           --app build/app/outputs/apk/debug/app-debug.apk \
-           --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
-           --timeout 3m
+    - name: Get Flutter packages
+      script: |
+        flutter packages pub get
+    - name: Build APK with Flutter
+      script: |
+        flutter build apk --debug
+    - name: Create debug and test APK
+      script: |
+        set - ex
+        cd android
+        ./gradlew app:assembleAndroidTest
+        ./gradlew app:assembleDebug -Ptarget="$CM_BUILD_DIR/intergration_test/app_test.dart"
+    - name: Run Firebase Test Lab Tests
+      script: |
+       set -ex
+          echo $GCLOUD_KEY_FILE | base64 --decode > ./gcloud_key_file.json
+          gcloud auth activate-service-account --key-file=gcloud_key_file.json
+          gcloud --quite config set project $FIREBASE_PROJECT
 
-  artifacts:
-    - build/**/outputs/**/*.apk
-    - build/**/outputs/**/*a.aab
-    - build/**/outputs/**/mapping.txt
-    - flutter_drive.log
+          gcloud firebase test android run \
+            --type instrumentation \
+            --app build/app/outputs/apk/debug/app-debug.apk \
+            --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
+            --timeout 3m
+    artifacts:
+      - build//outputs//*.apk
+      - build//outputs//*.aab
+      - build//outputs//mapping.txt
+      - flutter_drive.log
